<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hanshenrik.gronsleth_hasamishogi.RegisterNewPlayerActivity">

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:inputType="text"
        android:imeOptions="actionDone" />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/username_input"
        android:layout_marginTop="18dp"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone" />

    <EditText
        android:id="@+id/image_url_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image_url_hint"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/description_input"
        android:layout_marginTop="18dp"
        android:inputType="textUri"
        android:imeOptions="actionDone" />

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_url_input"
        android:layout_above="@+id/register_button"
        android:layout_marginTop="18dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="Something" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
